perf: eliminate merge allocation in setHooks by accepting hook sources directly (#1956)
* perf: eliminate merge allocation in setHooks by accepting hook sources directly

Signed-off-by: Tobias Ibounig <tobias.ibounig@dynatrace.com>

* improve test, to ensure hook order.

Signed-off-by: Tobias Ibounig <tobias.ibounig@dynatrace.com>

* Remove unused ObjectUtils#merge

Signed-off-by: Tobias Ibounig <tobias.ibounig@dynatrace.com>

* reintroduce and deprecate ObjectUtils.merge

Signed-off-by: Tobias Ibounig <tobias.ibounig@dynatrace.com>

* fixup: added comment

Signed-off-by: Todd Baert <todd.baert@dynatrace.com>

---------

Signed-off-by: Tobias Ibounig <tobias.ibounig@dynatrace.com>
Signed-off-by: Todd Baert <todd.baert@dynatrace.com>
Co-authored-by: Todd Baert <todd.baert@dynatrace.com>